--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>I'm very Sorry mera bacha😔</h1>
+    <h1>I'm Sorry 😔</h1>
     <p>I deeply regret what happened, and I hope you can forgive me.</p>
     <div class="buttons">
-      <button id="dontForgive">Maaf kiya</button>
-      <button id="forgive">Nhi mileaga maafi</button>
+      <button id="dontForgive">Don't Forgive</button>
+      <button id="forgive">Forgive</button>
     </div>
     <div id="response"></div>
   </div>
